--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,21 +5,440 @@
     ],
     "cSpell.words": [
         "axhline",
+        "BCLX",
+        "BCTF",
+        "BFNR",
+        "BFXT",
+        "BGKL",
+        "BHKV",
+        "BJLF",
+        "BJZC",
+        "BKML",
+        "BKSG",
+        "BLHG",
+        "BLHJ",
+        "BLZK",
+        "BMJT",
+        "BNRS",
+        "BPMR",
+        "BPNC",
+        "BQWT",
+        "BRKS",
+        "BRTD",
+        "BSKC",
+        "BTHC",
+        "BVDZ",
+        "BVGK",
+        "BVHF",
+        "BWPS",
         "cbar",
+        "CBSN",
+        "CDMF",
+        "CDVT",
+        "CFWQ",
+        "CHBW",
+        "CJFB",
+        "CJXV",
+        "CKBG",
+        "CKBM",
+        "CLRN",
         "cmap",
+        "CMHF",
+        "CMNT",
+        "CNFV",
+        "CNLR",
+        "CNQT",
+        "CNTP",
         "colorbar",
+        "CPQX",
+        "CQVG",
+        "CRKM",
+        "CRZP",
+        "CSNM",
+        "CSRJ",
+        "CVGP",
+        "CVNK",
+        "CWQD",
+        "CXDT",
+        "DBCJ",
+        "DBSN",
+        "DCNF",
+        "DGCL",
+        "DJTK",
+        "DKST",
+        "DNKZ",
+        "DPCQ",
+        "DPCT",
+        "DPNX",
+        "DQJM",
+        "DQSB",
+        "DRLQ",
+        "DRSJ",
+        "DSRB",
+        "DSVP",
+        "DVGK",
+        "DVKC",
+        "DWJX",
+        "DWRB",
+        "DZXS",
         "edgecolor",
         "facecolor",
+        "FBCZ",
+        "FBPW",
+        "FBTS",
+        "FCZT",
+        "FGMH",
+        "FHQL",
+        "FHTS",
+        "FHZD",
+        "FKWD",
+        "FKXT",
+        "FLSM",
+        "FNKC",
+        "FNRC",
+        "FNZM",
         "fontsize",
         "fontweight",
+        "FPCM",
+        "FPNR",
+        "FQPT",
         "frameon",
+        "FTWP",
+        "FZTC",
+        "GCNS",
+        "GDBC",
+        "GFHP",
+        "GFRM",
+        "GFRX",
+        "GHVK",
+        "GJCX",
+        "GKWB",
+        "GLBS",
+        "GLCX",
+        "GLWX",
+        "GLZQ",
+        "GNZR",
+        "GPCV",
+        "GPFH",
+        "GPJF",
+        "GQJC",
+        "GRLF",
+        "GSJC",
+        "GSKJ",
+        "GWFP",
+        "GWNS",
+        "GXKM",
+        "GXMH",
+        "HBDP",
+        "HCBT",
+        "HFRN",
+        "HFSB",
+        "HFTM",
+        "HFTQ",
+        "HFWR",
+        "HGLK",
+        "HGXQ",
+        "HKQS",
+        "HLFD",
+        "HLJN",
+        "HLJV",
+        "HMBQ",
+        "HMJV",
+        "HMRS",
+        "HMWS",
+        "HNRL",
+        "HNVB",
+        "HQMC",
+        "HQZB",
+        "HRFC",
+        "HRNG",
+        "HRTZ",
+        "HSFQ",
+        "HVLP",
+        "HXGV",
+        "HXQR",
+        "JDTS",
+        "JDTZ",
+        "JFTD",
+        "JHKD",
+        "JHKG",
+        "JKLW",
+        "JKNX",
+        "JPCT",
+        "JRBW",
+        "JRLX",
+        "JRTZ",
+        "JTGK",
+        "JVMD",
+        "JWNX",
+        "JXLT",
+        "JXQS",
+        "JXVM",
+        "KBRH",
+        "KCNJ",
+        "KCTG",
+        "KDNP",
+        "KFMQ",
+        "KFWR",
+        "KGFQ",
+        "KHGP",
+        "KHSZ",
+        "KJLS",
+        "KLGS",
+        "KLRQ",
+        "KPJB",
+        "KPTX",
+        "KSCM",
+        "KSDP",
+        "KSTM",
+        "KTRP",
+        "KTVN",
+        "KVGM",
+        "KVZJ",
+        "KWGQ",
+        "KWPR",
+        "KWVJ",
+        "KXGM",
+        "KZGP",
+        "LBFZ",
+        "LCFT",
+        "LCRQ",
+        "LCSP",
+        "LDQC",
+        "LDQT",
+        "LGBR",
+        "LGXW",
+        "LHMQ",
+        "LHWQ",
         "linestyle",
         "linewidth",
+        "LJDG",
+        "LKZS",
+        "LNMC",
+        "LPRX",
+        "LRZJ",
+        "LWDG",
+        "LXPF",
+        "LXVR",
         "mcolors",
+        "MCWG",
+        "MDLC",
+        "MDLQ",
+        "MDNL",
+        "MDPK",
+        "MDVQ",
+        "MGLQ",
+        "MGTL",
+        "MGTS",
+        "MHTN",
+        "MJQD",
+        "MNXP",
+        "MPBJ",
+        "MTDX",
+        "MTNL",
+        "MVDN",
+        "MVHW",
+        "MWRP",
+        "MXRS",
+        "NFLS",
+        "NFZT",
+        "NGKF",
+        "NGMS",
+        "NGXS",
+        "NLVH",
+        "NMCH",
+        "NPBH",
+        "NPFX",
+        "NPWT",
+        "NSBZ",
+        "NSDR",
+        "NTRP",
+        "NVMF",
+        "NZQV",
+        "PBMH",
+        "PBSQ",
+        "PCVW",
+        "PDZT",
+        "PHKM",
+        "PJCB",
+        "PJKW",
+        "PKGN",
+        "PLJZ",
+        "PLQC",
+        "PNLW",
+        "PNVH",
+        "PQSG",
+        "PRTX",
+        "PSDR",
+        "PSLX",
+        "PVRW",
+        "PWZD",
+        "PZBR",
+        "PZQV",
+        "QCJF",
+        "QDHV",
+        "QGMD",
+        "QGZL",
+        "QHBN",
+        "QHJZ",
+        "QJVM",
+        "QJWF",
+        "QKFS",
+        "QKVP",
+        "QLFS",
+        "QLJC",
+        "QLJT",
+        "QLKB",
+        "QMTL",
+        "QMTP",
+        "QNDM",
+        "QPMC",
+        "QRWF",
+        "QSBV",
+        "QSWH",
+        "QTSB",
+        "QWDC",
+        "QXBT",
+        "QXTZ",
+        "RBLX",
+        "RDJW",
+        "RFQV",
+        "RGHK",
+        "RHBW",
+        "RJXL",
+        "RJZS",
+        "RLHM",
+        "RMNX",
+        "RMPJ",
+        "RPNJ",
+        "RQNX",
+        "RSFN",
+        "RVLF",
+        "RVNQ",
+        "RVWK",
+        "RXDS",
+        "SBQM",
+        "SDXQ",
+        "SHRD",
+        "SLWJ",
+        "SNGV",
+        "SNJM",
+        "SQWH",
+        "SRLZ",
+        "STBF",
+        "STDH",
+        "SVFL",
+        "SXCW",
+        "TCQZ",
+        "TCRZ",
+        "TDMQ",
+        "TFCB",
+        "TFGD",
+        "TGXS",
+        "THGX",
+        "THKJ",
+        "TJQC",
+        "TKWR",
+        "TLMN",
+        "TMBD",
+        "TMCN",
+        "TPDV",
+        "TQBH",
+        "TRDM",
+        "TRSJ",
+        "TVGN",
+        "TXPR",
+        "TZKS",
+        "VBWK",
+        "VDNH",
+        "VGFR",
+        "VGKZ",
+        "VHMW",
+        "VHQW",
+        "VHRX",
+        "VKNW",
+        "VLCK",
+        "VLHK",
+        "VLJP",
+        "VLPX",
         "vmax",
         "vmin",
+        "VNBM",
+        "VNZQ",
+        "VPJZ",
+        "VQWS",
+        "VRBT",
+        "VRJQ",
+        "VWXZ",
+        "VXWS",
+        "VZJP",
+        "VZNQ",
+        "WCNV",
+        "WDKX",
+        "WDPJ",
+        "WFPJ",
+        "WFXJ",
+        "WGNZ",
+        "WJFN",
+        "WLQZ",
+        "WNBP",
+        "WNZB",
+        "WPBM",
+        "WPKL",
+        "WQPZ",
+        "WQXL",
+        "WSFZ",
+        "WSKC",
+        "WXJM",
+        "WXMH",
+        "WXNM",
+        "WXTH",
+        "WZBX",
+        "WZNC",
+        "XBDC",
+        "XBMQ",
+        "XDGT",
+        "XDRK",
+        "XFTD",
+        "XGLT",
+        "XKZB",
+        "XMKN",
+        "XMRK",
+        "XSFR",
+        "XSQZ",
         "xticks",
+        "XTPD",
+        "XVGW",
+        "XVLW",
+        "XVTB",
+        "XWHF",
+        "XWHV",
+        "XWZB",
+        "XZCJ",
         "ylabel",
-        "zorder"
+        "ZBJK",
+        "ZCRK",
+        "ZDNX",
+        "ZFPL",
+        "ZFRP",
+        "ZGJB",
+        "ZGST",
+        "ZHQJ",
+        "ZKLV",
+        "ZLMT",
+        "ZMBX",
+        "zorder",
+        "ZPML",
+        "ZPSJ",
+        "ZQLB",
+        "ZSJM",
+        "ZTHS",
+        "ZVGS",
+        "ZVJK",
+        "ZWFR",
+        "ZWJD",
+        "ZWLF",
+        "ZWLS",
+        "ZWVH"
     ]
 }
