--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Ignore all DayXX_input.txt files in any subdirectory
-**/Day??_p?_input.txt
-**/Day?_input.txt
+*Day??_p?_input.txt
+*Day?_input.txt
+*.exe
