--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore all DayXX_input.txt files in any subdirectory
 *Day??_p?_input.txt
+*Quest??_input_p?.txt
 *Day?_input.txt
 *.exe
 __pycache__/
